Add student panel and test management features: implement routes, components, and services for student tests; add student guard for role-based access; enhance UI with test filtering and detailed views.